fix: hide x-overflow

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
   font-size: 1.25rem;
   line-height: 1.5;
   margin: 0;
+  overflow-x: hidden;
 }
 
 body,
